# CTKPluginTutorials

./: CMakeLists.txt  README
Apps/: CMakeLists.txt
Apps/PluginBrowser/: CMakeLists.txt  PluginBrowserMain.cpp  ctkPluginBrowser.cpp  ctkPluginBrowser.h  ctkPluginTableModel.cpp  ctkPluginTableModel.h  cxFileInputWidget.cpp  cxFileInputWidget.h
Apps/UseCTKPlugin/: CMakeLists.txt  CTKFrameworkWrapper.cpp  CTKFrameworkWrapper.h  UseCTKPluginMain.cpp  target_libraries.cmake
Libs/Backend/: Backend.cpp  Backend.h  CMakeLists.txt  PluginFrameworkManager.cpp  PluginFrameworkManager.h
Plugins/org.mydomain.backend.impl/: BackendImplActivator.cpp  BackendImplActivator.h  BackendInterfaceImpl2.cpp  BackendInterfaceImpl2.h  CMakeLists.txt
Plugins/org.mydomain.testplugin/: BackendInterfaceImpl.cpp  BackendInterfaceImpl.h  CMakeLists.txt  TestPluginActivator.cpp  TestPluginActivator_p.h  TestService.cpp  TestService.h  TestServiceImpl.cpp  TestServiceImpl.h
